interbotix_ws/log/build_2023-08-22_15-38-52/moveit_service/stderr.log
  File "/home/inouemakoto/interbotix_ws/install/moveit_service/lib/python3.10/site-packages/moveit_service/interbotix_gripper.py", line 5
    from import
         ^^^^^^
SyntaxError: invalid syntax

